--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
 	<link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)" href="lib/tau/wearable/theme/default/tau.circle-patch-0.0.0.1.min.css">
 	<!-- load theme file for your application -->
 	<link rel="stylesheet" href="css/style.css">
+	
+	
+	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="js/utils-2.1.4.8.js"></script>
+	
+	<script type="text/javascript" src="js/ui/actionMenu-2.1.0.5.js"></script>
+	<script type="text/javascript" src="js/ui/toastMessage-1.0.1.1.js"></script>
 </head>
 <body>
 	<div class="ui-page ui-page-active" id="main">
 		<header>
-			<h2 class="ui-title">TAU Basic</h2>
+			<h2 class="ui-title">Tizen Web Common</h2>
 		</header>
 		<div class="ui-content ui-content-padding">
-			<p>Hello! </p>
+			<ul class="ui-listview">
+				<li onclick='showActionMenu()'>Action Menu</li>
+				<li onclick='showToastMessage()'>Toast Message</li>
+			</ul>
 		</div>
 	</div>
 	<script src="lib/tau/wearable/js/tau.min.js"></script>
