Refactoring of input

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	
 	<script type="text/javascript" src="js/ui/actionMenu-2.1.0.5.js"></script>
 	<script type="text/javascript" src="js/ui/toastMessage-1.1.1.js"></script>
+	<script type="text/javascript" src="js/input/typeGear-1.0.0.js"></script>
+	<script type="text/javascript" src="js/input/input-1.0.2.0.js"></script>
+	
 </head>
 <body>
 	<div class="ui-page ui-page-active" id="main">
@@ -24,6 +27,8 @@
 			<ul class="ui-listview">
 				<li onclick='showActionMenu()'>Action Menu</li>
 				<li onclick='showToastMessage()'>Toast Message</li>
+				<li onclick='showInput()'>Show single line input</li>
+				<li onclick='showMultilineInput()'>Show multi line input</li>
 			</ul>
 		</div>
 	</div>
