--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width,user-scalable=no">
-	<title>Basic</title>
-	<link rel="stylesheet" href="lib/tau/wearable/theme/default/tau.min.css">
-	<link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)" href="lib/tau/wearable/theme/default/tau.circle-patch-0.0.0.1.min.css">
-	<!-- load theme file for your application -->
-	<link rel="stylesheet" href="css/style.css">
-	
-	
-	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="js/utils-2.1.4.10.js"></script>
-	
-	<script type="text/javascript" src="js/ui/actionMenu-2.1.0.5.js"></script>
-	<script type="text/javascript" src="js/ui/toastMessage-1.1.1.js"></script>
-	<script type="text/javascript" src="js/input/typeGear-1.0.0.js"></script>
-	<script type="text/javascript" src="js/input/input-1.0.2.0.js"></script>
-	
+<meta name="viewport" content="width=device-width,user-scalable=no">
+<title>Basic</title>
+
+<link rel="stylesheet" href="lib/tau/wearable/theme/default/tau.min.css">
+<link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)"
+	href="lib/tau/wearable/theme/default/tau.circle-patch-0.0.0.1.min.css">
+
+<link rel="stylesheet" href="css/style.css">
+
+<script src="lib/tau/wearable/js/tau.min.js"></script>
+
+<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+<script type="text/javascript" src="js/utils-2.1.4.10.js"></script>
+
+<script type="text/javascript" src="js/ui/actionMenu-2.1.0.5.js"></script>
+<script type="text/javascript" src="js/ui/toastMessage-1.1.1.js"></script>
+<script type="text/javascript" src="js/input/typeGear-1.0.0.js"></script>
+<script type="text/javascript" src="js/input/input-1.0.2.0.js"></script>
+<script type="text/javascript" src="js/ui/circle-helper-1.0.0.3.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+
 </head>
 <body>
 	<div class="ui-page ui-page-active" id="main">
-		<header>
+		<header class="ui-header">
 			<h2 class="ui-title">Tizen Web Common</h2>
 		</header>
-		<div class="ui-content ui-content-padding">
+		<div class="ui-content">
 			<ul class="ui-listview">
 				<li onclick='showActionMenu()'>Action Menu</li>
 				<li onclick='showToastMessage()'>Toast Message</li>
@@ -32,9 +37,8 @@
 			</ul>
 		</div>
 	</div>
-	<script src="lib/tau/wearable/js/tau.min.js"></script>
-	<script src="js/app.js"></script>
+
 	<!--<script src="js/lowBatteryCheck.js"></script>-->
-	<!--<script src="js/circle-helper.js"></script>-->
+	
 </body>
 </html>
