added swipelist layout

--- a/index.html
+++ b/index.html
@@ -35,11 +35,32 @@
 				<li onclick='showToastMessage()'>Toast Message</li>
 				<li onclick='showInput()'>Show single line input</li>
 				<li onclick='showMultilineInput()'>Show multi line input</li>
+				<li onclick='showSwipeList()'>Show swipe list</li>
 			</ul>
 		</div>
 	</div>
 
-	<!--<script src="js/lowBatteryCheck.js"></script>-->
+	<div class="ui-page ui-page-active" id="swipeListPage">
+		<header class="ui-header">
+			<h2 class="ui-title">Swipe list</h2>
+		</header>
+		<div class="ui-content">
+			<ul class="ui-listview ui-swipelist-list">
+
+			</ul>
+
+		<div class="ui-swipelist">
+			<div class="ui-swipelist-left">
+				<div class="ui-swipelist-icon"></div>
+				<div class="ui-swipelist-text">Swipe left title</div>
+			</div>
+			<div class="ui-swipelist-right">
+				<div class="ui-swipelist-icon"></div>
+				<div class="ui-swipelist-text">Swipe right title</div>
+			</div>
+		</div>
+		</div>
+	</div>
 	
 </body>
 </html>
