--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <script type="text/javascript" src="js/ui/actionMenu-2.1.0.5.js"></script>
 <script type="text/javascript" src="js/ui/toastMessage-1.1.1.js"></script>
+<script type="text/javascript" src="js/ui/swipeList-1.0.0.1.js"></script>
 <script type="text/javascript" src="js/input/typeGear-1.0.0.js"></script>
 
 <script type="text/javascript" src="js/input/input-1.0.4.1.js"></script>
@@ -40,13 +41,16 @@
 		</div>
 	</div>
 
-	<div class="ui-page ui-page-active" id="swipeListPage">
+	<div class="ui-page" id="swipeListPage">
 		<header class="ui-header">
 			<h2 class="ui-title">Swipe list</h2>
 		</header>
 		<div class="ui-content">
 			<ul class="ui-listview ui-swipelist-list">
-
+				<li id="first"><a href="#">First item<span class="ui-li-sub-text li-text-sub">Sub item</span></a></li>
+				<li id="second">Second item</li>
+				<li id="third">Third item</li>
+				<li id="fourth">Fourth item</li>
 			</ul>
 
 		<div class="ui-swipelist">
