--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width,user-scalable=no">
 <title>Basic</title>
@@ -13,7 +13,7 @@
 <script src="lib/tau/wearable/js/tau.min.js"></script>
 
 <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-<script type="text/javascript" src="js/utils-2.1.4.11.js"></script>
+<script type="text/javascript" src="js/utils-2.1.5.0.js"></script>
 
 <script type="text/javascript" src="js/ui/actionMenu-2.1.0.5.js"></script>
 <script type="text/javascript" src="js/ui/toastMessage-1.1.1.js"></script>
