Updated new lib files

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 
 <link rel="stylesheet" href="lib/tau/wearable/theme/default/tau.min.css">
 <link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)"
-	href="lib/tau/wearable/theme/default/tau.circle-patch-0.0.0.1.min.css">
+	href="lib/tau/wearable/theme/default/tau.circle.min.css">
 
 <link rel="stylesheet" href="css/style.css">
+<link href="css/style.circle.css" media="all and (-tizen-geometric-shape: circle)" rel="stylesheet" />
 
 <script src="lib/tau/wearable/js/tau.min.js"></script>
 
