--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link href="css/style.circle.css" media="all and (-tizen-geometric-shape: circle)" rel="stylesheet" />
 
+	<script type="text/javascript" src="js/ui/circle-helper.js"></script>
 <script src="lib/tau/wearable/js/tau.min.js"></script>
 
 <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
@@ -22,7 +23,7 @@
 <script type="text/javascript" src="js/input/typeGear-1.0.0.js"></script>
 
 <script type="text/javascript" src="js/input/input-1.0.4.3.js"></script>
-<script type="text/javascript" src="js/ui/circle-helper-1.0.0.3.js"></script>
+
 <script type="text/javascript" src="js/app.js"></script>
 
 </head>
