--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="css/style.circle.css" media="all and (-tizen-geometric-shape: circle)" rel="stylesheet" />
 
 	<script type="text/javascript" src="js/ui/circle-helper.js"></script>
-<script src="lib/tau/wearable/js/tau.min.js"></script>
+<script src="lib/tau/wearable/js/tau.js"></script>
 
 <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 <script type="text/javascript" src="js/utils-2.1.6.js"></script>
@@ -39,6 +39,7 @@
 				<li onclick='showInput()'>Show single line input</li>
 				<li onclick='showMultilineInput()'>Show multi line input</li>
 				<li onclick='showSwipeList()'>Show swipe list</li>
+				<li onclick='addListItem()'>Add list item</li>
 			</ul>
 		</div>
 	</div>
