--- a/index.html
+++ b/index.html
@@ -1,70 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width,user-scalable=no">
-<title>Basic</title>
+    <meta name="viewport" content="width=device-width,user-scalable=no">
+    <title>Basic</title>
 
-<link rel="stylesheet" href="lib/tau/wearable/theme/default/tau.min.css">
-<link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)"
-	href="lib/tau/wearable/theme/default/tau.circle-patch-0.0.0.1.min.css">
+    <link rel="stylesheet" href="lib/tau/wearable/theme/default/tau.min.css">
+    <link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)"
+          href="lib/tau/wearable/theme/default/tau.circle-patch-0.0.0.1.min.css">
 
-<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
-<script src="lib/tau/wearable/js/tau.min.js"></script>
+    <script src="lib/tau/wearable/js/tau.min.js"></script>
 
-<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-<script type="text/javascript" src="js/utils-2.1.7.js"></script>
+    <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="js/utils-2.1.7.js"></script>
 
-<script type="text/javascript" src="js/ui/actionMenu-2.1.1.1.js"></script>
-<script type="text/javascript" src="js/ui/toastMessage-1.2.0.js"></script>
-<script type="text/javascript" src="js/ui/swipeList-1.0.0.1.js"></script>
-<script type="text/javascript" src="js/input/typeGear-1.0.0.js"></script>
+    <script type="text/javascript" src="js/ui/actionMenu-2.1.1.1.js"></script>
+    <script type="text/javascript" src="js/ui/contextMenu-1.0.2.js"></script>
+    <script type="text/javascript" src="js/ui/toastMessage-1.2.0.js"></script>
+    <script type="text/javascript" src="js/ui/swipeList-1.0.0.1.js"></script>
+    <script type="text/javascript" src="js/input/typeGear-1.0.0.js"></script>
 
-<script type="text/javascript" src="js/input/input-1.0.4.3.js"></script>
-<script type="text/javascript" src="js/ui/circle-helper-1.0.0.3.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/input/input-1.0.4.3.js"></script>
+    <script type="text/javascript" src="js/ui/circle-helper-1.0.0.3.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
 
 </head>
 <body>
-	<div class="ui-page ui-page-active" id="main">
-		<header class="ui-header">
-			<h2 class="ui-title">Tizen Web Common</h2>
-		</header>
-		<div class="ui-content">
-			<ul class="ui-listview">
-				<li onclick='showActionMenu()'>Action Menu</li>
-				<li onclick='showToastMessage()'>Toast Message</li>
-				<li onclick='showInput()'>Show single line input</li>
-				<li onclick='showMultilineInput()'>Show multi line input</li>
-				<li onclick='showSwipeList()'>Show swipe list</li>
-			</ul>
-		</div>
-	</div>
+<div class="ui-page ui-page-active" id="main">
+    <header class="ui-header">
+        <h2 class="ui-title">Tizen Web Common</h2>
+    </header>
+    <div class="ui-content">
+        <ul class="ui-listview">
+            <li onclick='showActionMenu()'>Action Menu</li>
+            <li onclick='showToastMessage()'>Toast Message</li>
+            <li onclick='showInput()'>Show single line input</li>
+            <li onclick='showMultilineInput()'>Show multi line input</li>
+            <li onclick='showSwipeList()'>Show swipe list</li>
+            <li id="contextMenuLi" class="li-has-multiline">
+                <label>
+                    Tap or hold for
+                    <span class="li-text-sub ui-li-sub-text">context menu</span>
+                </label>
+            </li>
+        </ul>
+    </div>
+</div>
 
-	<div class="ui-page" id="swipeListPage">
-		<header class="ui-header">
-			<h2 class="ui-title">Swipe list</h2>
-		</header>
-		<div class="ui-content">
-			<ul class="ui-listview ui-swipelist-list">
-				<li id="first"><a href="#">First item<span class="ui-li-sub-text li-text-sub">Sub item</span></a></li>
-				<li id="second">Second item</li>
-				<li id="third">Third item</li>
-				<li id="fourth">Fourth item</li>
-			</ul>
+<div class="ui-page" id="swipeListPage">
+    <header class="ui-header">
+        <h2 class="ui-title">Swipe list</h2>
+    </header>
+    <div class="ui-content">
+        <ul class="ui-listview ui-swipelist-list">
+            <li id="first"><a href="#">First item<span class="ui-li-sub-text li-text-sub">Sub item</span></a></li>
+            <li id="second">Second item</li>
+            <li id="third">Third item</li>
+            <li id="fourth">Fourth item</li>
+        </ul>
 
-		<div class="ui-swipelist">
-			<div class="ui-swipelist-left">
-				<div class="ui-swipelist-icon"></div>
-				<div class="ui-swipelist-text">Swipe left title</div>
-			</div>
-			<div class="ui-swipelist-right">
-				<div class="ui-swipelist-icon"></div>
-				<div class="ui-swipelist-text">Swipe right title</div>
-			</div>
-		</div>
-		</div>
-	</div>
-	
+        <div class="ui-swipelist">
+            <div class="ui-swipelist-left">
+                <div class="ui-swipelist-icon"></div>
+                <div class="ui-swipelist-text">Swipe left title</div>
+            </div>
+            <div class="ui-swipelist-right">
+                <div class="ui-swipelist-icon"></div>
+                <div class="ui-swipelist-text">Swipe right title</div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
