--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 
     <link rel="stylesheet" href="lib/tau/wearable/theme/default/tau.min.css">
     <link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)"
-          href="lib/tau/wearable/theme/default/tau.circle-patch-0.0.0.1.min.css">
+          href="lib/tau/wearable/theme/default/tau.circle.min.css">
 
     <link rel="stylesheet" href="css/style.css">
+
+    <script type="text/javascript" src="js/ui/circle-helper.js"></script>
 
     <script src="lib/tau/wearable/js/tau.min.js"></script>
 
@@ -21,8 +23,8 @@
     <script type="text/javascript" src="js/ui/swipeList-1.0.0.1.js"></script>
     <script type="text/javascript" src="js/input/typeGear-1.0.0.js"></script>
 
-    <script type="text/javascript" src="js/input/input-1.0.4.3.js"></script>
-    <script type="text/javascript" src="js/ui/circle-helper-1.0.0.3.js"></script>
+    <script type="text/javascript" src="js/input/input-1.1.0.js"></script>
+
     <script type="text/javascript" src="js/app.js"></script>
 
 </head>
