Added reference to circle style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
           href="lib/tau/wearable/theme/default/tau.circle.min.css">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)"
+          href="css/style.circle.css">
 
     <script type="text/javascript" src="js/ui/circle-helper.js"></script>
 
