--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <link rel="stylesheet" media="all and (-tizen-geometric-shape: circle)"
           href="css/style.circle.css">
 
-    <script type="text/javascript" src="js/ui/circle-helper.js"></script>
+    <script type="text/javascript" src="js/libs/circle-helper.js"></script>
 
     <script src="lib/tau/wearable/js/tau.min.js"></script>
 
-    <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="js/utils-2.1.7.js"></script>
+    <script type="text/javascript" src="js/libs/jquery-3.6.4.min.js"></script>
+    <script type="text/javascript" src="js/libs/utils-2.1.8.js"></script>
 
-    <script type="text/javascript" src="js/ui/actionMenu-2.1.1.1.js"></script>
-    <script type="text/javascript" src="js/ui/contextMenu-1.1.0.js"></script>
-    <script type="text/javascript" src="js/ui/toastMessage-1.2.0.js"></script>
+    <script type="text/javascript" src="js/libs/actionMenu-2.2.0.js"></script>
+    <script type="text/javascript" src="js/libs/contextMenu-1.1.0.js"></script>
+    <script type="text/javascript" src="js/libs/toastMessage-1.2.0.js"></script>
     <script type="text/javascript" src="js/input/typeGear-1.0.0.js"></script>
-    <script type="text/javascript" src="js/ui/list-1.0.0.js"></script>
+    <script type="text/javascript" src="js/libs/list-1.0.1.js"></script>
 
-    <script type="text/javascript" src="js/input/input-1.1.0.js"></script>
+    <script type="text/javascript" src="js/input/input-1.1.1.js"></script>
 
     <script type="text/javascript" src="js/app.js"></script>
 
